Doc/99管理対象外/10_個人フォルダ/Giphe/8月/Python/20200806Python.txt
+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-
+-+-+-+-+-+-+-+-Python作業メモ+-+-+-+-+-+-+-+-
+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+


■エラー
★self.user_id = tk.StringVar()
                    ^
SyntaxError: invalid character in identifier
→エクセルで編集した文字列では不正な半角空白文字になっている場合がある
→ctrl + fでエラー空白を正常空白に置き換える必要がある

★RecursionError: maximum recursion depth exceeded in comparison
Fatal Python error: Cannot recover from stack overflow.
Python runtime state: initialized
→無限ループになる

★認証に失敗
→コマンドラインから開く
"C:\Program Files (x86)\WinSCP\WinSCP.exe" sftp://giphesroom.wordpress.comhRHbYgvEsRniXRxENiXi@sftp.wp.com /console


■ショートカット

photoshop
選択範囲解除 ctrl + D

■課題

課題①：
※選択可能種族はすでに存在する進化先を選べないようにする必要あり
※選択後再びSelectしているので無駄にDB負荷がかかってしまっている（ぶっちゃツリーデータで取得済みなので必要ない）



課題⑩：
数百件程度であれば自力で作ることも可能
geneランクによって進化可能な種族を判定する仕組みも必要

課題㉖：
ゲームロード時表示されるデータがDbから取得されていない。（DATA_1などsetting.csから定数を取得している）

課題㉗：
ロード時の選択プレーヤーネームとsignupやloadボタンが同列に表示されてしまう
→プレーヤーネームの表示はload_game選択時にプルダウンで表示する
→メニュー項目格納候補→

課題㉘：
キャラメイク画面のバグを解消

課題㉙：
キャラメイクと種族作成画面の互換性、子画面のupdFlgがtrueの場合親画面を更新する必要




■メモ
★python技術
①イベント後エラーメッセージを指定の場所に表示可能
→ファンクションでgird配置指定で生成する（Validateを走らせた後実行有無を判定）


★実装
Displayの作成
ログイン→ホーム画面でキャラクター選択
→初期画面
①主人公データ読み込み
・キャラクタ、種族、遺伝子、地域、ダンジョン等マスタ取得
・左上にステータス表示
・描画を一度で済ます？

②表示（Spritesシート）
・キャラクタ、アニメーション３D
→SpritesシートPlayerクラス実装
・周りのオブジェクト
→SpritesシートBuildingクラス実装
・NPC、敵
→SpritesシートMobクラス実装
・シンボル
→SpritesシートSymbolクラス実装

③プラットフォーム（Platformシート）
〇表示範囲
→拡大可能、ライキン参考、上から視点、町は家など建物
〇表示物
→視点移動時は地面と木だけの描写、操作停止時にオブジェクトを描画する
〇再描画
→プレイヤーコマンド選択時

④操作
・十字キー移動
→視点移動、キャラ移動（キャラにフォーカス時）
・


コマンド

★pygameの課題
・スーパーファミコンレベル
・2Dカジュアルゲームの作成が多い
・3Dは得意ではない
作れるゲームですがスーパーファミコン時代の2Dカジュアルゲームならできます。
昨今の3DのリアルタイムのFPSの様なゲームの作成は描画処理の問題があり難しいです。


★DBについて
①UPDATEするときは文字列、数値のチェックが必要なのでフォーマットファイルの作成はある意味合理的なのかも
②①の場合、テーブルの改修が入った場合にフォーマットファイルの修正が追加になるので改修に弱いといえる
③

■進捗07/23
GUIの作成終了→ゲーム本体の製造
・初期画面（タイトル、データ表示、NEWGAME、開発者メニュー等）
〇NEWGAME画面ではランダムでデータを作成することが可能ランダム特化なので、signupメソッドを使用する
→完全な新規画面、signupのようなGUIではなくプラットフォームはpygame
→実装はゲームで典型的なキャラメイク画面を想定
→新規種族、キャラは不可。ガチャ要素なので既存のキャラクター、種族、遺伝子からランダムで設定される。
→★アサイン中

〇開発者メニュー
→作成済みGUI画面、データの生成等を行うsignup：キャラ、create_race：種族など
→【未実装】locationで任意の場所に建物を設置、ダンジョンメイク（ダンジョンキャラはsignupで作成）
→★8月中旬目安

■次回
・内部イベント作成

